--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   kiwi: ^0.2.0
   equatable: ^1.0.1
   collection: ^1.14.11
+  flutter_redux: ^0.6.0
 
 dev_dependencies:
   flutter_test:
