--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   equatable: ^1.0.1
   collection: ^1.14.11
   flutter_redux: ^0.6.0
+  bloc: ^3.0.0
+  flutter_bloc: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +25,8 @@ dev_dependencies:
   build_runner: ^1.7.2
   kiwi_generator: ^0.4.0
   flutter_launcher_icons: ^0.7.3
+  test: ^1.3.0
+  bloc_test: ^4.0.0
 
 flutter:
   uses-material-design: true
