--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           flutter-version: '1.12.13+hotfix.5'
       - name: "Build - Android - Debug"
-        run: flutter build apk --debug
+        run: flutter build apk --debug --build-number=$GitVersion_BuildMetaData
       - name: "Build - iOS - Debug"
-        run: flutter build ios --debug --no-codesign
+        run: flutter build ios --debug --no-codesign --build-number=$GitVersion_BuildMetaData
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
