--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,21 +11,21 @@ jobs:
           flutter-version: '1.12.13+hotfix.5'
       - run: flutter test
 
-  build-debug:
-    name: Build - Debug
+  build-release:
+    name: Build - Release
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.12.13+hotfix.5'
-      - name: "Build - Android - Debug"
-        run: flutter build apk --debug --build-number=$GitVersion_BuildMetaData
-      - name: "Build - iOS - Debug"
-        run: flutter build ios --debug --no-codesign --build-number=$GitVersion_BuildMetaData
+      - name: "Build - Android - Release"
+        run: flutter build apk --release --build-number=$GitVersion_BuildMetaData
+      - name: "Build - iOS - Release"
+        run: flutter build ios --release --no-codesign --build-number=$GitVersion_BuildMetaData
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
           name: app
-          path: build/app/outputs/apk/debug/app-debug.apk
+          path: build/app/outputs/apk/release/app-release.apk
 
