--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app
-          path: build/app/outputs/apk/release/app-release.apk
+          path: build/app/outputs/bundle/release/app-release.aab
 
