--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  flame: ^0.18.1
+  cupertino_icons: ^0.1.3
+  flame: ^0.18.2
   kiwi: ^0.2.0
-  equatable: ^1.0.1
-  collection: ^1.14.11
+  equatable: ^1.1.1
+  collection: '>=1.14.11 <1.14.12'
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
 
@@ -21,10 +21,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
-  build_runner: ^1.7.2
+  build_runner: '>=0.10.3 <1.8.1'
   kiwi_generator: ^0.4.0
-  flutter_launcher_icons: ^0.7.3
-  test: ^1.3.0
+  flutter_launcher_icons: ^0.7.4
   bloc_test: ^4.0.0
 
 flutter:
