--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
   mockito: ^4.1.1
   build_runner: '>=0.10.3 <1.8.1'
   kiwi_generator: ^0.4.0
