--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   collection: '>=1.14.11 <1.14.12'
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
+  sentry: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,7 @@ flutter:
       fonts:
         - asset: fonts/EmilysCandy-Regular.ttf
   assets:
+    - assets/secrets.json
     - assets/images/cards/clubs/7.png
     - assets/images/cards/clubs/8.png
     - assets/images/cards/clubs/9.png
