--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,9 @@ lib/generated_plugin_registrant.dart
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # Secrets
-**/*/key.properties
-**/*/*.jks
-**/*/api-key.json
+**/key.properties
+**/*.jks
+**/api-key.json
 assets/secrets.json
 
 **/report.xml
