--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
   sentry: ^3.0.1
+  package_info: '>=0.4.0+16 <2.0.0'
 
 dev_dependencies:
   flutter_test:
