--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   sentry: ^3.0.1
   package_info: '>=0.4.0+16 <2.0.0'
+  device_info: ^0.4.2+1
 
 dev_dependencies:
   flutter_test:
